--- a/src/main/resources/static/Contacto.html
+++ b/src/main/resources/static/Contacto.html
@@ -56,7 +56,7 @@
   -------------------------------------------------------->
   <nav class="navbar navbar-expand-lg">
     <div class="container">
-      <a class="nav-link" id="cervezasNavBar" href="./catálogo.html" style="color: #640002">CERVEZAS</a>
+      <a class="nav-link" id="cervezasNavBar" href="/Catalogo.html" style="color: #640002">CERVEZAS</a>
       <form class="d-flex d-lg-block col-sm-5 col-md-5 col-lg-5 ms-lg-5" role="search">
         <input class="form-control" type="search" placeholder="¿Qué buscas?" aria-label="Search">
       </form>
@@ -70,10 +70,10 @@
             <a class="nav-link" href="/Productores.html" style="color: #640002">PRODUCTORES</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/nosotros.html" style="color: #640002">NOSOTROS</a>
+            <a class="nav-link" href="/Nosotros.html" style="color: #640002">NOSOTROS</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/Contactonew.html" style="color: #640002">CONTACTANOS</a>
+            <a class="nav-link" href="/Contacto.html" style="color: #640002">CONTACTANOS</a>
           </li>
         </ul>
       </div>
@@ -146,61 +146,58 @@
     <!-- <div class="container-fluid"> -->
     <div class="container">
       <div class="row">
-  
+
         <!-- Redes sociales -->
-        <div class="col-md-2">
+        <div class="col-md-4">
           <div class="footerRedesSociales">
-              <h6> Tel: +52 55 55 55 55 </h6>
-              <h6> Correo: correo@outlook.com </h6>
-              <h6> Redes sociales </h6>
-              <a href="https://www.facebook.com/" target="_blank"><img src="Assets/Img/icono-fc.png" alt="logotipo de Facebook" height="30px"></a>
-              <a href="https://www.instagram.com/" target="_blank"><img src="Assets/Img/icono-ig.webp" alt="logotipo de Instagram" height="30px"></a>
-              <a href="https://twitter.com/?lang=es" target="_blank"><img src="Assets/Img/icono-tw.png" alt="logotipo de twitter" height="30px"></a>
+            <h6> Tel: +52 55 55 55 55 </h6>
+            <h6> Correo: correo@outlook.com </h6>
+            <h6> Redes sociales </h6>
+            <a href="https://www.facebook.com/" target="_blank"><img src="Assets/Img/icono-fc.png"
+                alt="logotipo de Facebook" height="30px"></a>
+            <a href="https://www.instagram.com/" target="_blank"><img src="Assets/Img/icono-ig.jpg"
+                alt="logotipo de Instagram" height="30px"></a>
+            <a href="https://twitter.com/?lang=es" target="_blank"><img src="Assets/Img/icono-tw.png"
+                alt="logotipo de twitter" height="30px"></a>
           </div>
         </div>
-  
+
         <!-- Aviso de privacidad -->
-      <div class="col-md-3">
-        <h6>
-          <a onclick="aviso()" class="linkFooter">Aviso de privacidad</a>
-        </h6>
-      </div>
-  
-        <!-- Terminos y condiciones -->
-        <div class="col-md-3">
+        <div class="col-md-2">
           <h6>
-            <a href="/termycond.html" class="linkFooter">Términos y condiciones</a>
+            <a onclick="aviso()" class="linkFooter">Aviso de privacidad</a>
           </h6>
         </div>
-  
-      <!-- Contacto -->
-      <div class="col-md-2">
-        <h6>
-          <a href="/Contactonew.html" class="linkFooter">Contacto</a>
-        </h6>
+
+        <!-- Terminos y condiciones -->
+        <div class="col-md-2">
+          <h6>
+            <a href="/TerminosYCondiciones.html" class="linkFooter">Términos y condiciones</a>
+          </h6>
+        </div>
+
+        <!-- Contacto -->
+        <div class="col-md-2">
+          <h6>
+            <a href="/Contacto.html" class="linkFooter">Contacto</a>
+          </h6>
+        </div>
+
+        <!-- Nosotros -->
+        <div class="col-md-2">
+          <h6>
+            <a href="/Nosotros.html" class="linkFooter">Nosotros</a>
+          </h6>
+        </div>
       </div>
-  
-      <!-- Nosotros -->
-      <div class="col-md-2">
-        <h6>
-          <a href="/nosotros.html" class="linkFooter">Nosotros</a>
-        </h6>
+
+      <div class="text-center">
+        Evite el exceso
       </div>
-  
-  
-      </div>
-  
-    </div>
-  
-    <div class="text-center">
-      Evite el exceso
-    </div>
-    <!-- </div> -->
-  
+      <!-- </div> -->
+
     </div>
   </footer>
-
-
 
 
     <!-- Link de CDN para Bootstrap 5 CSS -->
