--- a/src/main/resources/static/TerminosYCondiciones.html
+++ b/src/main/resources/static/TerminosYCondiciones.html
@@ -45,7 +45,7 @@
          <a class="navbar-item m-1" href="/Login.html">
           <img src="/Assets/Img/iconUser.png"  width="30px" height="30px">
         </a> 
-        <a class="cart" href="/cart.html">
+        <a class="cart" href="/Cart.html">
           <img src="/Assets/Img/cart.png"  width="30px" height="30px"><span
           class="position-absolute top-25 end-175 translate-middle" id="contador">0</span>
         </a>
@@ -57,7 +57,7 @@
 -------------------------------------------------------->
   <nav class="navbar navbar-expand-lg">
     <div class="container">
-      <a class="nav-link" id="cervezasNavBar" href="/catálogo.html">CERVEZAS</a>
+      <a class="nav-link" id="cervezasNavBar" href="/Catalogo.html">CERVEZAS</a>
       <form class="d-flex d-lg-block col-sm-5 col-md-5 col-lg-5 ms-lg-5" role="search">
         <input class="form-control" type="search" placeholder="¿Qué buscas?" aria-label="Search">
       </form>
@@ -71,10 +71,10 @@
             <a class="nav-link" style="color: #640002" href="/Productores.html">PRODUCTORES</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" style="color: #640002" href="/nosotros.html">NOSOTROS</a>
+            <a class="nav-link" style="color: #640002" href="/Nosotros.html">NOSOTROS</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" style="color: #640002" href="/Contactonew.html">CONTACTANOS</a>
+            <a class="nav-link" style="color: #640002" href="/Contacto.html">CONTACTANOS</a>
           </li>
         </ul>
       </div>
@@ -182,28 +182,24 @@ Fecha de última actualización 22 de noviembre de 2021.</p></center>
         <!-- Terminos y condiciones -->
         <div class="col-md-2">
           <h6>
-            <a href="/termycond.html" class="linkFooter">Términos y condiciones</a>
+            <a href="/TerminosYCondiciones.html" class="linkFooter">Términos y condiciones</a>
           </h6>
         </div>
 
       <!-- Contacto -->
       <div class="col-md-2">
         <h6>
-          <a href="/Contactonew.html" class="linkFooter">Contacto</a>
+          <a href="/Contacto.html" class="linkFooter">Contacto</a>
         </h6>
       </div>
 
       <!-- Nosotros -->
       <div class="col-md-2">
         <h6>
-          <a href="/nosotros.html" class="linkFooter">Nosotros</a>
+          <a href="/Nosotros.html" class="linkFooter">Nosotros</a>
         </h6>
       </div>
-
-       
-
       </div>
-
     </div>
 
     <div class="text-center">
@@ -213,6 +209,8 @@ Fecha de última actualización 22 de noviembre de 2021.</p></center>
 
     </div>
   </footer>
+
+  
   <!--BootStrap-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
