--- a/src/main/resources/static/envio.html
+++ b/src/main/resources/static/envio.html
@@ -68,10 +68,10 @@
             <a class="nav-link" style="color: #640002" href="/Productores.html">PRODUCTORES</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" style="color: #640002" href="/nosotros.html">NOSOTROS</a>
+            <a class="nav-link" style="color: #640002" href="/Nosotros.html">NOSOTROS</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" style="color: #640002" href="/Contactonew.html">CONTACTANOS</a>
+            <a class="nav-link" style="color: #640002" href="/Contacto.html">CONTACTANOS</a>
           </li>
         </ul>
       </div>
@@ -278,63 +278,62 @@
 
 <!-- FOOTER -->
 <footer>
-    <!-- Tel, correo y redes sociales -->
-    <!-- <div class="container-fluid"> -->
-    <div class="container">
-      <div class="row">
-  
-        <!-- Redes sociales -->
-        <div class="col-md-2">
-          <div class="footerRedesSociales">
-              <h6> Tel: +52 55 55 55 55 </h6>
-              <h6> Correo: correo@outlook.com </h6>
-              <h6> Redes sociales </h6>
-              <a href="https://www.facebook.com/" target="_blank"><img src="Assets/Img/icono-fc.png" alt="logotipo de Facebook" height="30px"></a>
-              <a href="https://www.instagram.com/" target="_blank"><img src="Assets/Img/icono-ig.webp" alt="logotipo de Instagram" height="30px"></a>
-              <a href="https://twitter.com/?lang=es" target="_blank"><img src="Assets/Img/icono-tw.png" alt="logotipo de twitter" height="30px"></a>
-          </div>
+  <!-- Tel, correo y redes sociales -->
+  <!-- <div class="container-fluid"> -->
+  <div class="container">
+    <div class="row">
+
+      <!-- Redes sociales -->
+      <div class="col-md-4">
+        <div class="footerRedesSociales">
+          <h6> Tel: +52 55 55 55 55 </h6>
+          <h6> Correo: correo@outlook.com </h6>
+          <h6> Redes sociales </h6>
+          <a href="https://www.facebook.com/" target="_blank"><img src="Assets/Img/icono-fc.png"
+              alt="logotipo de Facebook" height="30px"></a>
+          <a href="https://www.instagram.com/" target="_blank"><img src="Assets/Img/icono-ig.jpg"
+              alt="logotipo de Instagram" height="30px"></a>
+          <a href="https://twitter.com/?lang=es" target="_blank"><img src="Assets/Img/icono-tw.png"
+              alt="logotipo de twitter" height="30px"></a>
         </div>
-  
-        <!-- Aviso de privacidad -->
-      <div class="col-md-3">
+      </div>
+
+      <!-- Aviso de privacidad -->
+      <div class="col-md-2">
         <h6>
           <a onclick="aviso()" class="linkFooter">Aviso de privacidad</a>
         </h6>
       </div>
-  
-        <!-- Terminos y condiciones -->
-        <div class="col-md-3">
-          <h6>
-            <a href="/termycond.html" class="linkFooter">Términos y condiciones</a>
-          </h6>
-        </div>
-  
+
+      <!-- Terminos y condiciones -->
+      <div class="col-md-2">
+        <h6>
+          <a href="/TerminosYCondiciones.html" class="linkFooter">Términos y condiciones</a>
+        </h6>
+      </div>
+
       <!-- Contacto -->
       <div class="col-md-2">
         <h6>
-          <a href="/Contactonew.html" class="linkFooter">Contacto</a>
+          <a href="/Contacto.html" class="linkFooter">Contacto</a>
         </h6>
       </div>
-  
+
       <!-- Nosotros -->
       <div class="col-md-2">
         <h6>
-          <a href="/nosotros.html" class="linkFooter">Nosotros</a>
+          <a href="/Nosotros.html" class="linkFooter">Nosotros</a>
         </h6>
       </div>
-  
-  
-      </div>
-  
     </div>
-  
+
     <div class="text-center">
       Evite el exceso
     </div>
     <!-- </div> -->
-  
-    </div>
-  </footer>
+
+  </div>
+</footer>
 
       
 <!-- BOOTSTRAP JavaScript Bundle with Popper -->
