--- a/src/main/resources/static/Login.html
+++ b/src/main/resources/static/Login.html
@@ -245,7 +245,7 @@
   <!--jquery-->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
    <!--conexion js-->
-   <script src="./Assets/Js/cart.js"> </script>
+   <script src="/Assets/Js/cart.js"> </script>
   <!--Login.js-->
   <script src="/Assets/Js/Login.js"></script>
   <!--validation-->
