--- a/src/main/resources/static/cart.html
+++ b/src/main/resources/static/cart.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="shortcut icon" href="/Assets/Img/logo.png">
+    <link rel="shortcut icon" href="./Assets/Img/logo.png">
     <title>Carrito SakáChelas</title>
 
     <!-- Vinculo para Bootstrap -->
@@ -34,20 +34,20 @@
 
 <nav class="navbar p-3" id="colo">
   <div class="container">
-    <a class="navbar-item" href="/Index.html">
-      <img src="/Assets/Img/logo.png" alt="" width="70" height="60">
+    <a class="navbar-item" href="./Index.html">
+      <img src="./Assets/Img/logo.png" alt="" width="70" height="60">
     </a>
       <div class="position-absolute top-50 start-50 translate-middle">
         <a class="navbar-item">
-          <img src="/Assets/Img/ribbon.png" alt="" width="200" height="80">
+          <img src="./Assets/Img/ribbon.png" alt="" width="200" height="80">
         </a>
       </div> 
     <div class="ms-auto">
-      <a class="navbar-item" href="/Login.html">
-        <img src="/Assets/Img/iconUser.png" alt="" width="30" height="30">
+      <a class="navbar-item" href="./Login.html">
+        <img src="./Assets/Img/iconUser.png" alt="" width="30" height="30">
       </a>
-      <a class="cart" href="/Cart.html">
-        <img src="/Assets/Img/cart.png" alt="" width="30" height="30"><span
+      <a class="cart" href="./Cart.html">
+        <img src="./Assets/Img/cart.png" alt="" width="30" height="30"><span
         class="position-absolute top-25 end-175 translate-middle" id="contador">0</span>
       </a>
     </div>
@@ -61,7 +61,7 @@
 
   <nav class="navbar navbar-expand-lg">
     <div class="container">
-      <a class="nav-link" id="cervezasNavBar" href="/Catalogo.html" style="color: #640002">CERVEZAS</a>
+      <a class="nav-link" id="cervezasNavBar" href="./Catalogo.html" style="color: #640002">CERVEZAS</a>
       <form class="d-flex d-lg-block col-sm-5 col-md-5 col-lg-5 ms-lg-5" role="search">
         <input class="form-control" type="search" placeholder="¿Qué buscas?" aria-label="Search">
       </form>
@@ -72,13 +72,13 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link" href="/Productores.html" style="color: #640002">PRODUCTORES</a>
+            <a class="nav-link" href="./Productores.html" style="color: #640002">PRODUCTORES</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/Nosotros.html" style="color: #640002">NOSOTROS</a>
+            <a class="nav-link" href="./Nosotros.html" style="color: #640002">NOSOTROS</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/Contacto.html" style="color: #640002">CONTACTANOS</a>
+            <a class="nav-link" href="./Contacto.html" style="color: #640002">CONTACTANOS</a>
           </li>
         </ul>
       </div>
@@ -111,9 +111,9 @@
   <!-- Termina carrito -->
   <center>
     <div class="my-2 p-1">
-        <a href="/Envio.html"><button type="button" class="btn btn-outline-dark">Dirección de envio</button></a>
+        <a href="./Envio.html"><button type="button" class="btn btn-outline-dark">Dirección de envio</button></a>
     </div>
-</center>
+  </center>
 
 
 
@@ -134,9 +134,9 @@
             <h6> Tel: +52 55 55 55 55 </h6>
             <h6> Correo: correo@outlook.com </h6>
             <h6> Redes sociales </h6>
-            <a href="https://www.facebook.com/" target="_blank"><img src="Assets/Img/icono-fc.png" alt="logotipo de Facebook" height="30px"></a>
-            <a href="https://www.instagram.com/" target="_blank"><img src="Assets/Img/icono-ig.jpg" alt="logotipo de Instagram" height="30px"></a>
-            <a href="https://twitter.com/?lang=es" target="_blank"><img src="Assets/Img/icono-tw.png" alt="logotipo de twitter" height="30px"></a>
+            <a href="https://www.facebook.com/" target="_blank"><img src="./Assets/Img/icono-fc.png" alt="logotipo de Facebook" height="30px"></a>
+            <a href="https://www.instagram.com/" target="_blank"><img src="./Assets/Img/icono-ig.jpg" alt="logotipo de Instagram" height="30px"></a>
+            <a href="https://twitter.com/?lang=es" target="_blank"><img src="./Assets/Img/icono-tw.png" alt="logotipo de twitter" height="30px"></a>
         </div>
       </div>
 
@@ -150,21 +150,21 @@
       <!-- Terminos y condiciones -->
       <div class="col-md-2">
         <h6>
-          <a href="/TerminosYCondiciones.html" class="linkFooter">Términos y condiciones</a>
+          <a href="./TerminosYCondiciones.html" class="linkFooter">Términos y condiciones</a>
         </h6>
       </div>
 
     <!-- Contacto -->
     <div class="col-md-2">
       <h6>
-        <a href="/Contacto.html" class="linkFooter">Contacto</a>
+        <a href="./Contacto.html" class="linkFooter">Contacto</a>
       </h6>
     </div>
 
     <!-- Nosotros -->
     <div class="col-md-2">
       <h6>
-        <a href="/Nosotros.html" class="linkFooter">Nosotros</a>
+        <a href="./Nosotros.html" class="linkFooter">Nosotros</a>
       </h6>
     </div>
     </div>
@@ -188,7 +188,7 @@
 
     <!--llamado sweetaler2 de js-->
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="/Assets/Js/main.js"></script>
+    <script src="./Assets/Js/main.js"></script>
 
 </body>
 </html>
