--- a/src/main/resources/static/Index.html
+++ b/src/main/resources/static/Index.html
@@ -5,14 +5,14 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="/static/Img/logo.png">
+  <link rel="shortcut icon" href="./Assets/Img/logo.png">
   <title>Sakáchelas</title>
 
   <!-- Link de CDN para Bootstrap 5 CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 
-  <link rel="stylesheet" href="/static/Assets/Styles/inicio.css">
+  <link rel="stylesheet" href="./Assets/Styles/inicio.css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,27 +21,27 @@
 
 <body>
   <audio autoplay>
-    <source src="/static/Assets/lata.mp3" type="audio/mpeg">
+    <source src="./Assets/lata.mp3" type="audio/mpeg">
   </audio>
   <!------------------------------------------------------
                        Encabezado
 -------------------------------------------------------->
   <nav class="navbar p-3" id="colo">
     <div class="container">
-      <a class="navbar-item" href="/sakachelas/api/index.html">
-        <img src="/static/Assets/Img/logo.png" alt="" width="70" height="60">
+      <a class="navbar-item" href="./index.html">
+        <img src="./Assets/Img/logo.png" alt="" width="70" height="60">
       </a>
       <div class="position-absolute top-50 start-50 translate-middle">
         <a class="navbar-item">
-          <img src="/static/Assets/Img/ribbon.png" alt="" width="200" height="80">
+          <img src="./Assets/Img/ribbon.png" alt="" width="200" height="80">
         </a>
       </div>
       <div class="ms-auto">
-        <a class="navbar-item" href="/sakachelas/api/Login.html">
-          <img src="/static/Assets/Img/iconUser.png" alt="" width="30" height="30">
+        <a class="navbar-item" href="./Login.html">
+          <img src="./Assets/Img/iconUser.png" alt="" width="30" height="30">
         </a>
         <a class="cart" href="/Cart.html">
-          <img src="/static/Assets/Img/cart.png" alt="" width="30" height="30"><span
+          <img src="./Assets/Img/cart.png" alt="" width="30" height="30"><span
             class="position-absolute top-25 end-175 translate-middle" id="contador">0</span>
         </a>
       </div>
@@ -52,7 +52,7 @@
 -------------------------------------------------------->
   <nav class="navbar navbar-expand-lg">
     <div class="container">
-      <a class="nav-link" id="cervezasNavBar" href="/Catalogo.html" style="color: #640002">CERVEZAS</a>
+      <a class="nav-link" id="cervezasNavBar" href="./Catalogo.html" style="color: #640002">CERVEZAS</a>
       <form class="d-flex d-lg-block col-sm-5 col-md-5 col-lg-5 ms-lg-5" role="search">
         <input class="form-control" type="search" placeholder="¿Qué buscas?" aria-label="Search">
       </form>
@@ -63,13 +63,13 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link" href="/Productores.html" style="color: #640002">PRODUCTORES</a>
+            <a class="nav-link" href="./Productores.html" style="color: #640002">PRODUCTORES</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/Nosotros.html" style="color: #640002">NOSOTROS</a>
+            <a class="nav-link" href="./Nosotros.html" style="color: #640002">NOSOTROS</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/Contacto.html" style="color: #640002">CONTACTANOS</a>
+            <a class="nav-link" href="./Contacto.html" style="color: #640002">CONTACTANOS</a>
           </li>
         </ul>
       </div>
@@ -93,13 +93,13 @@
       <!-- Elementos del carrusel -->
       <div class="carousel-inner">
         <div class="carousel-item active" data-interval="3000">
-          <img class="d-block w-100" src="/static/Assets/Img/BANNER PRUEBA1.png" alt="First slide">
+          <img class="d-block w-100" src="./Assets/Img/BANNER PRUEBA1.png" alt="First slide">
         </div>
         <div class="carousel-item" data-interval="3000">
-          <img class="d-block w-100" src="/static/Assets/Img/BANNER PRUEBA2.png" alt="Second slide">
+          <img class="d-block w-100" src="./Assets/Img/BANNER PRUEBA2.png" alt="Second slide">
         </div>
         <div class="carousel-item" data-interval="3000">
-          <img class="d-block w-100" src="/static/Assets/Img/BANNER PRUEBA3.png" alt="Third slide">
+          <img class="d-block w-100" src="./Assets/Img/BANNER PRUEBA3.png" alt="Third slide">
         </div>
       </div>
 
@@ -121,13 +121,13 @@
     <br>
     <div class="row">
       <div class="col">
-        <img src="/static/Assets/Img/FRACTAL.png">
+        <img src="./Assets/Img/FRACTAL.png">
       </div>
       <div class="col">
-        <img src="/static/Assets/Img/KALI BREWS.png">
+        <img src="./Assets/Img/KALI BREWS.png">
       </div>
       <div class="col">
-        <img src="/static/Assets/Img/COPADO.png">
+        <img src="./Assets/Img/COPADO.png">
       </div>
     </div>
   </div>
@@ -143,7 +143,7 @@
 
       <div class="producto col-md-4">
         <div class="card-body">
-          <img src="/static/Assets/Img/copadoMestiza.jpeg" class="producto__img" width="250" height="250">
+          <img src="./Assets/Img/copadoMestiza.jpeg" class="producto__img" width="250" height="250">
           <div class="productDescription">
 
             <h4 class="producto__title">Mestiza</h4>
@@ -151,7 +151,7 @@
               Cerveza oscura <br>
               ABV 5.5%</h6>
             <h5 class="card-text">$90.00 <a href=""><i class="produto__icon fas fa-cart-plus"><img
-                    src="/static/Assets/Img/cart.png" alt="" class="img_carrito"></i></a></h5>
+                    src="./Assets/Img/cart.png" alt="" class="img_carrito"></i></a></h5>
           </div>
 
         </div>
@@ -159,14 +159,14 @@
 
       <div class="producto col-md-4">
         <div class="card-body">
-          <img src="/static/Assets/Img/copadoPrieta.jpeg" class="producto__img" width="250" height="250">
+          <img src="./Assets/Img/copadoPrieta.jpeg" class="producto__img" width="250" height="250">
           <div class="productDescription">
             <h4 class="producto__title">Prieta</h4>
             <h6>American Brown Ale <br>
               Cerveza oscura <br>
               ABV 5.5%</h6>
             <h5 class="card-text">$90.00 <a href=""><i class="produto__icon fas fa-cart-plus"><img
-                    src="/static/Assets/Img/cart.png" alt="" class="img_carrito"></i></a></h5>
+                    src="./Assets/Img/cart.png" alt="" class="img_carrito"></i></a></h5>
           </div>
         </div>
       </div>
@@ -174,14 +174,14 @@
 
       <div class="producto col-md-4">
         <div class="card-body">
-          <img src="/static/Assets/Img/copadoRubia.jpeg" class="producto__img" width="250" height="250">
+          <img src="./Assets/Img/copadoRubia.jpeg" class="producto__img" width="250" height="250">
           <div class="productDescription">
             <h4 class="producto__title">Rubia</h4>
             <h6>American Brown Ale <br>
               Cerveza oscura <br>
               ABV 5.5%</h6>
             <h5 class="card-text">$90.00 <a href=""><i class="produto__icon fas fa-cart-plus"><img
-                    src="/static/Assets/Img/cart.png" alt="" class="img_carrito"></i></a></h5>
+                    src="./Assets/Img/cart.png" alt="" class="img_carrito"></i></a></h5>
           </div>
 
         </div>
@@ -194,7 +194,7 @@
 
   <div class="container-fluid px-0">
     <div class="row">
-      <img src="/static/Assets/Img/FinalCerveza.png">
+      <img src="./Assets/Img/FinalCerveza.png">
     </div>
   </div>
   <br>
@@ -213,11 +213,11 @@
             <h6> Tel: +52 55 55 55 55 </h6>
             <h6> Correo: correo@outlook.com </h6>
             <h6> Redes sociales </h6>
-            <a href="https://www.facebook.com/" target="_blank"><img src="/static/Assets/Img/icono-fc.png"
+            <a href="https://www.facebook.com/" target="_blank"><img src="./Assets/Img/icono-fc.png"
                 alt="logotipo de Facebook" height="30px"></a>
-            <a href="https://www.instagram.com/" target="_blank"><img src="/static/Assets/Img/icono-ig.jpg"
+            <a href="https://www.instagram.com/" target="_blank"><img src="./Assets/Img/icono-ig.jpg"
                 alt="logotipo de Instagram" height="30px"></a>
-            <a href="https://twitter.com/?lang=es" target="_blank"><img src="/static/Assets/Img/icono-tw.png"
+            <a href="https://twitter.com/?lang=es" target="_blank"><img src="./Assets/Img/icono-tw.png"
                 alt="logotipo de twitter" height="30px"></a>
           </div>
         </div>
@@ -232,21 +232,21 @@
         <!-- Terminos y condiciones -->
         <div class="col-md-2">
           <h6>
-            <a href="/static/TerminosYCondiciones.html" class="linkFooter">Términos y condiciones</a>
+            <a href="./TerminosYCondiciones.html" class="linkFooter">Términos y condiciones</a>
           </h6>
         </div>
 
         <!-- Contacto -->
         <div class="col-md-2">
           <h6>
-            <a href="/Contacto.html" class="linkFooter">Contacto</a>
+            <a href="./Contacto.html" class="linkFooter">Contacto</a>
           </h6>
         </div>
 
         <!-- Nosotros -->
         <div class="col-md-2">
           <h6>
-            <a href="/Nosotros.html" class="linkFooter">Nosotros</a>
+            <a href="./Nosotros.html" class="linkFooter">Nosotros</a>
           </h6>
         </div>
       </div>
@@ -264,10 +264,10 @@
     crossorigin="anonymous"></script>
 
   <!--conexion js-->
-  <script src="/static/Assets/Js/cart.js"> </script>
+  <script src="./Assets/Js/cart.js"> </script>
   <!--Js swal-->
   <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <script src="/static/Assets/Js/main.js"></script>
+  <script src="./Assets/Js/main.js"></script>
 
 </body>
 
