--- a/src/main/resources/static/TerminosYCondiciones.html
+++ b/src/main/resources/static/TerminosYCondiciones.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="shortcut icon" href="/Assets/Img/logo.png">
+  <link rel="shortcut icon" href="./Assets/Img/logo.png">
   <title>Términos y condiciones SakáChelas</title>
   <!--BootStrap-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -12,7 +12,7 @@
   <!--Bootstrap button-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <!--CSS file-->
-  <link rel="stylesheet" href="/Assets/Styles/Login.css">
+  <link rel="stylesheet" href="./Assets/Styles/Login.css">
 
   <!--google fonts-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -31,20 +31,20 @@
 -------------------------------------------------------->
   <nav class="navbar p-3" id="colo">
     <div class="container">
-      <a class="navbar-item" href="/Index.html">
-        <img src="/Assets/Img/logo.png" alt="" width="70" height="60">
+      <a class="navbar-item" href="./Index.html">
+        <img src="./Assets/Img/logo.png" alt="" width="70" height="60">
       </a>
       <div class="position-absolute top-50 start-50 translate-middle">
         <a class="navbar-item">
-          <img src="/Assets/Img/ribbon.png" alt="" width="200" height="80">
+          <img src="./Assets/Img/ribbon.png" alt="" width="200" height="80">
         </a>
       </div>
       <div class="ms-auto">
-         <a class="navbar-item m-1" href="/Login.html">
-          <img src="/Assets/Img/iconUser.png"  width="30px" height="30px">
+         <a class="navbar-item m-1" href="./Login.html">
+          <img src="./Assets/Img/iconUser.png"  width="30px" height="30px">
         </a> 
-        <a class="cart" href="/Cart.html">
-          <img src="/Assets/Img/cart.png"  width="30px" height="30px"><span
+        <a class="cart" href="./Cart.html">
+          <img src="./Assets/Img/cart.png"  width="30px" height="30px"><span
           class="position-absolute top-25 end-175 translate-middle" id="contador">0</span>
         </a>
       </div>
@@ -55,7 +55,7 @@
 -------------------------------------------------------->
   <nav class="navbar navbar-expand-lg">
     <div class="container">
-      <a class="nav-link" id="cervezasNavBar" href="/Catalogo.html">CERVEZAS</a>
+      <a class="nav-link" id="cervezasNavBar" href="./Catalogo.html">CERVEZAS</a>
       <form class="d-flex d-lg-block col-sm-5 col-md-5 col-lg-5 ms-lg-5" role="search">
         <input class="form-control" type="search" placeholder="¿Qué buscas?" aria-label="Search">
       </form>
@@ -66,13 +66,13 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link" style="color: #640002" href="/Productores.html">PRODUCTORES</a>
+            <a class="nav-link" style="color: #640002" href="./Productores.html">PRODUCTORES</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" style="color: #640002" href="/Nosotros.html">NOSOTROS</a>
+            <a class="nav-link" style="color: #640002" href="./Nosotros.html">NOSOTROS</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" style="color: #640002" href="/Contacto.html">CONTACTANOS</a>
+            <a class="nav-link" style="color: #640002" href="./Contacto.html">CONTACTANOS</a>
           </li>
         </ul>
       </div>
@@ -164,9 +164,9 @@ Fecha de última actualización 22 de noviembre de 2021.</p></center>
               <h6> Tel: +52 55 55 55 55 </h6>
               <h6> Correo: correo@outlook.com </h6>
               <h6> Redes sociales </h6>
-              <a href="https://www.facebook.com/" target="_blank"><img src="Assets/Img/icono-fc.png" alt="logotipo de Facebook" height="30px"></a>
-              <a href="https://www.instagram.com/" target="_blank"><img src="Assets/Img/icono-ig.jpg" alt="logotipo de Instagram" height="30px"></a>
-              <a href="https://twitter.com/?lang=es" target="_blank"><img src="Assets/Img/icono-tw.png" alt="logotipo de twitter" height="30px"></a>
+              <a href="https://www.facebook.com/" target="_blank"><img src="./Assets/Img/icono-fc.png" alt="logotipo de Facebook" height="30px"></a>
+              <a href="https://www.instagram.com/" target="_blank"><img src="./Assets/Img/icono-ig.jpg" alt="logotipo de Instagram" height="30px"></a>
+              <a href="https://twitter.com/?lang=es" target="_blank"><img src="./Assets/Img/icono-tw.png" alt="logotipo de twitter" height="30px"></a>
           </div>
         </div>
 
@@ -180,21 +180,21 @@ Fecha de última actualización 22 de noviembre de 2021.</p></center>
         <!-- Terminos y condiciones -->
         <div class="col-md-2">
           <h6>
-            <a href="/TerminosYCondiciones.html" class="linkFooter">Términos y condiciones</a>
+            <a href="./TerminosYCondiciones.html" class="linkFooter">Términos y condiciones</a>
           </h6>
         </div>
 
       <!-- Contacto -->
       <div class="col-md-2">
         <h6>
-          <a href="/Contacto.html" class="linkFooter">Contacto</a>
+          <a href="./Contacto.html" class="linkFooter">Contacto</a>
         </h6>
       </div>
 
       <!-- Nosotros -->
       <div class="col-md-2">
         <h6>
-          <a href="/Nosotros.html" class="linkFooter">Nosotros</a>
+          <a href="./Nosotros.html" class="linkFooter">Nosotros</a>
         </h6>
       </div>
       </div>
@@ -216,14 +216,14 @@ Fecha de última actualización 22 de noviembre de 2021.</p></center>
   <!--jquery-->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <!--Login.js-->
-  <script src="/Assets/Js/Login.js"></script>
+<!--  <script src="./Assets/Js/Login.js"></script>-->
   <!--conexion js-->
   <script src="./Assets/Js/cart.js"> </script>
   <!--validation-->
   <script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
    <!--swal-->
    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-   <script src="/Assets/Js/main.js"></script>
+   <script src="./Assets/Js/main.js"></script>
  
 </body>
 
