--- a/src/main/resources/static/envio.html
+++ b/src/main/resources/static/envio.html
@@ -15,8 +15,8 @@
     <!-- //Iconos -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <!-- CSS file -->
-    <link rel="stylesheet" href="/Assets/Css/envio.css">
-    <link rel="shortcut icon" href="/Assets/Img/logo.png">
+    <link rel="stylesheet" href="./Assets/Css/envio.css">
+    <link rel="shortcut icon" href="./Assets/Img/logo.png">
 
     <title>Datos de envío SakáChelas</title>
 </head>
@@ -30,20 +30,20 @@
   -------------------------------------------------------->
   <nav class="navbar p-3" id="colo">
     <div class="container">
-      <a class="navbar-item" href="/Index.html">
-        <img src="/Assets/Img/logo.png" alt="" width="70" height="60">
+      <a class="navbar-item" href="./Index.html">
+        <img src="./Assets/Img/logo.png" alt="" width="70" height="60">
       </a>
       <div class="position-absolute top-50 start-50 translate-middle">
         <a class="navbar-item">
-          <img src="/Assets/Img/ribbon.png" alt="" width="200" height="80">
+          <img src="./Assets/Img/ribbon.png" alt="" width="200" height="80">
         </a>
       </div>
       <div class="ms-auto">
-        <a class="navbar-item m-1" href="/Login.html">
-          <img src="/Assets/Img/iconUser.png" width="30px" height="30px">
+        <a class="navbar-item m-1" href="./Login.html">
+          <img src="./Assets/Img/iconUser.png" width="30px" height="30px">
         </a>
-        <a class="cart" href="/Cart.html">
-          <img src="/Assets/Img/cart.png" width="30px" height="30px"><span
+        <a class="cart" href="./Cart.html">
+          <img src="./Assets/Img/cart.png" width="30px" height="30px"><span
             class="position-absolute top-25 end-175 translate-middle" id="contador">0</span>
         </a>
       </div>
@@ -54,7 +54,7 @@
   -------------------------------------------------------->
   <nav class="navbar navbar-expand-lg">
     <div class="container">
-      <a class="nav-link" style="color: #640002" id="cervezasNavBar" href="/Catalogo.html">CERVEZAS</a>
+      <a class="nav-link" style="color: #640002" id="cervezasNavBar" href="./Catalogo.html">CERVEZAS</a>
       <form class="d-flex d-lg-block col-sm-5 col-md-5 col-lg-5 ms-lg-5" role="search">
         <input class="form-control" type="search" placeholder="¿Qué buscas?" aria-label="Search">
       </form>
@@ -65,13 +65,13 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link" style="color: #640002" href="/Productores.html">PRODUCTORES</a>
+            <a class="nav-link" style="color: #640002" href="./Productores.html">PRODUCTORES</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" style="color: #640002" href="/Nosotros.html">NOSOTROS</a>
+            <a class="nav-link" style="color: #640002" href="./Nosotros.html">NOSOTROS</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" style="color: #640002" href="/Contacto.html">CONTACTANOS</a>
+            <a class="nav-link" style="color: #640002" href="./Contacto.html">CONTACTANOS</a>
           </li>
         </ul>
       </div>
@@ -84,7 +84,7 @@
     <div class="row my-5">
         <div class="col p-4">
             <div class="text-black align-content-center">
-                <img src="/Assets/Img/logo.png" width="100px" alt="">
+                <img src="./Assets/Img/logo.png" width="100px" alt="">
             </div>
             <h2 class="fw-bold text-center py-5">Datos de envío</h2>
             <h5>Datos del destinatario</h5>
@@ -267,7 +267,7 @@
                 </div>
                 <center>
                     <div class="my-2 p-1">
-                        <a href="/Formadepago.html"><button type="button" class="btn btn-outline-dark">Proceder al pago</button></a>
+                        <a href="./Formadepago.html"><button type="button" class="btn btn-outline-dark">Proceder al pago</button></a>
                     </div>
                 </center>
             </form>
@@ -289,11 +289,11 @@
           <h6> Tel: +52 55 55 55 55 </h6>
           <h6> Correo: correo@outlook.com </h6>
           <h6> Redes sociales </h6>
-          <a href="https://www.facebook.com/" target="_blank"><img src="Assets/Img/icono-fc.png"
+          <a href="https://www.facebook.com/" target="_blank"><img src="./Assets/Img/icono-fc.png"
               alt="logotipo de Facebook" height="30px"></a>
-          <a href="https://www.instagram.com/" target="_blank"><img src="Assets/Img/icono-ig.jpg"
+          <a href="https://www.instagram.com/" target="_blank"><img src="./Assets/Img/icono-ig.jpg"
               alt="logotipo de Instagram" height="30px"></a>
-          <a href="https://twitter.com/?lang=es" target="_blank"><img src="Assets/Img/icono-tw.png"
+          <a href="https://twitter.com/?lang=es" target="_blank"><img src="./Assets/Img/icono-tw.png"
               alt="logotipo de twitter" height="30px"></a>
         </div>
       </div>
@@ -308,21 +308,21 @@
       <!-- Terminos y condiciones -->
       <div class="col-md-2">
         <h6>
-          <a href="/TerminosYCondiciones.html" class="linkFooter">Términos y condiciones</a>
+          <a href="./TerminosYCondiciones.html" class="linkFooter">Términos y condiciones</a>
         </h6>
       </div>
 
       <!-- Contacto -->
       <div class="col-md-2">
         <h6>
-          <a href="/Contacto.html" class="linkFooter">Contacto</a>
+          <a href="./Contacto.html" class="linkFooter">Contacto</a>
         </h6>
       </div>
 
       <!-- Nosotros -->
       <div class="col-md-2">
         <h6>
-          <a href="/Nosotros.html" class="linkFooter">Nosotros</a>
+          <a href="./Nosotros.html" class="linkFooter">Nosotros</a>
         </h6>
       </div>
     </div>
@@ -348,7 +348,8 @@
 <!--swal-->
 <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
-<script src="/Assets/Js/envio.js"></script>
+<script src="./Assets/Js/envio.js"></script>
+    <script src="./Assets/Js/main.js"></script>
 
 </body>
 </html>
