--- a/src/main/resources/static/Contacto.html
+++ b/src/main/resources/static/Contacto.html
@@ -13,7 +13,7 @@
 
     <script src="https://kit.fontawesome.com/307ddc93d2.js" crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" type="text/css" href="./Assets/Styles/styles.css">
+    <link rel="stylesheet" type="text/css" href="./Assets/Css/contacto.css">
     
   <!--google fonts-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
