--- a/src/main/resources/static/nosotros.html
+++ b/src/main/resources/static/nosotros.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="/Assets/Img/logo.png">
+  <link rel="shortcut icon" href="./Assets/Img/logo.png">
 	<title>Nosotros SakáChelas</title>
 
     
@@ -21,7 +21,7 @@
 
 
     <!-- Vinculo a CSS -->
-    <link rel="stylesheet" href="/Assets/Styles/nosotros.css">
+    <link rel="stylesheet" href="./Assets/Css/nosotros.css">
     <!-- Vinculo para Roboto  -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -36,20 +36,20 @@
 
 <nav class="navbar p-3" id="colo">
     <div class="container">
-      <a class="navbar-item" href="/Index.html">
-      <img src="Assets/Img/logo.png" alt="" width="70" height="60">
+      <a class="navbar-item" href="./Index.html">
+      <img src="./Assets/Img/logo.png" alt="" width="70" height="60">
       </a>
       <div class="position-absolute top-50 start-50 translate-middle">
         <a class="navbar-item" href="#">
-          <img src="Assets/Img/ribbon.png" alt="" width="200" height="80">
+          <img src="./Assets/Img/ribbon.png" alt="" width="200" height="80">
         </a>
       </div>
       <div class="ms-auto">
-        <a class="navbar-item" href="/Login.html">
+        <a class="navbar-item" href="./Login.html">
           <img src="Assets/Img/iconUser.png" alt="" width="30" height="30">
         </a>
-        <a class="cart" href="/cart.html">
-          <img src="Assets/Img/cart.png" alt="" width="30" height="30"><span
+        <a class="cart" href="./cart.html">
+          <img src="./Assets/Img/cart.png" alt="" width="30" height="30"><span
           class="position-absolute top-25 end-175 translate-middle" id="contador">0</span>
         </a>
       </div>
@@ -63,7 +63,7 @@
 
 <nav class="navbar navbar-expand-lg">
   <div class="container">
-    <a class="nav-link" id="cervezasNavBar" href="/Catalogo.html" style="color: #640002">CERVEZAS</a>
+    <a class="nav-link" id="cervezasNavBar" href="./Catalogo.html" style="color: #640002">CERVEZAS</a>
     <form class="d-flex d-lg-block col-sm-5 col-md-5 col-lg-5 ms-lg-5" role="search">
       <input class="form-control" type="search" placeholder="¿Qué buscas?" aria-label="Search">
     </form>
@@ -74,13 +74,13 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item">
-          <a class="nav-link" href="/Productores.html" style="color: #640002">PRODUCTORES</a>
+          <a class="nav-link" href="./Productores.html" style="color: #640002">PRODUCTORES</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/Nosotros.html" style="color: #640002">NOSOTROS</a>
+          <a class="nav-link" href="./Nosotros.html" style="color: #640002">NOSOTROS</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/Contacto.html" style="color: #640002">CONTACTANOS</a>
+          <a class="nav-link" href="./Contacto.html" style="color: #640002">CONTACTANOS</a>
         </li>
       </ul>
     </div>
@@ -148,7 +148,7 @@
         <!-- Andrea -->
         <div class="carousel_elemento">
           <div class="card-body">
-            <img src="Assets/Img/Andrea.jpeg" class="card-img-top" alt="Foto de Andrea Pérez" >
+            <img src="./Assets/Img/Andrea.jpeg" class="card-img-top" alt="Foto de Andrea Pérez" >
             <h4 id="nombresCarousel">Andrea Peréz</h4>
             <p class="card-text">Soy una persona con gran gusto por la ciencia y la lectura, me apasiona compartir el conocimiento que adquiero y tengo una gran habilidad para trabajar en equipo. Suelo ser paciente con los demás. Me adapto rápidamente a los cambios, me emocionan los retos y aprender nuevas cosas.
             </p>
@@ -159,7 +159,7 @@
         <!-- Fernando -->
         <div class="carousel_elemento">
           <div class="card-body">
-            <img src="Assets/Img/Fernando.jpeg" class="card-img-top" alt="Foto de Fernando Flores"  >
+            <img src="./Assets/Img/Fernando.jpeg" class="card-img-top" alt="Foto de Fernando Flores"  >
             <h4 id="nombresCarousel">Fernando Flores</h4>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content. Some quick example text to build on the card title and make up the bulk of the card's content.
             </p>
@@ -170,7 +170,7 @@
         <!-- Francisco -->
         <div class="carousel_elemento">
           <div class="card-body">
-            <img src="Assets/Img/Francisco.jpg" class="card-img-top" alt="Foto de Francisco Briseño"   >
+            <img src="./Assets/Img/Francisco.jpg" class="card-img-top" alt="Foto de Francisco Briseño"   >
             <h4 id="nombresCarousel">Francisco Briseño</h4>
             <p class="card-text">Soy un chico que le gusta  estudiar, encontrar cosas nuevas, diferentes, soy amigable y me adapto fácilmente, me gusta tomar en cuenta a las demás, todos tienen algo que aportar. Ingeniero biomédico con gusto por las ciencias computacionales.
             </p>
@@ -181,7 +181,7 @@
         <!-- Gabriel -->
         <div class="carousel_elemento">
           <div class="card-body">
-            <img src="Assets/Img/Gabriel.jpeg" class="card-img-top" alt="Foto de Gabriel Campos" >
+            <img src="./Assets/Img/Gabriel.jpeg" class="card-img-top" alt="Foto de Gabriel Campos" >
             <h4 id="nombresCarousel">Gabriel Campos</h4>
             <p class="card-text">Soy una persona apasionada con la tecnología, cada día me gusta aprender cosas nuevas, me gusta mucho trabajar en equipo para poder tener diferentes ideas y puntos de vista.
             </p>
@@ -192,7 +192,7 @@
         <!-- Martín -->
         <div class="carousel_elemento">
           <div class="card-body">
-            <img src="Assets/Img/Martin.jpeg" class="card-img-top" alt="Foto de Martín Robles">
+            <img src="./Assets/Img/Martin.jpeg" class="card-img-top" alt="Foto de Martín Robles">
             <h4 id="nombresCarousel">Martín Robles</h4>
             <p class="card-text">Ingeniero incursionando en el mundo de IT, un basto mundo en el cual encontré una nueva pasión. 
               Autodidacta, organizado y entusiasta. Me encantan las ciencias exactas y pulir mis habilidades constantemente.
@@ -204,7 +204,7 @@
         <!-- Ramón -->
         <div class="carousel_elemento">
           <div class="card-body">
-            <img src="Assets/Img/Ramon.jpeg" class="card-img-top" alt="Foto de Ramón Saturnino">
+            <img src="./Assets/Img/Ramon.jpeg" class="card-img-top" alt="Foto de Ramón Saturnino">
             <h4 id="nombresCarousel">Ramón Saturnino</h4>
             <p class="card-text">Soy un ingeniero de software Jr apasionado por mi trabajo. Tengo un gran amor por las las ciencias computacionales, me encanta la tecnología, programación e inteligencia artificial.
             </p>
@@ -241,8 +241,8 @@
               <h6> Tel: +52 55 55 55 55 </h6>
               <h6> Correo: correo@outlook.com </h6>
               <h6> Redes sociales </h6>
-              <a href="https://www.facebook.com/" target="_blank"><img src="Assets/Img/icono-fc.png" alt="logotipo de Facebook" height="30px"></a>
-              <a href="https://www.instagram.com/" target="_blank"><img src="Assets/Img/icono-ig.webp" alt="logotipo de Instagram" height="30px"></a>
+              <a href="https://www.facebook.com/" target="_blank"><img src="./Assets/Img/icono-fc.png" alt="logotipo de Facebook" height="30px"></a>
+              <a href="https://www.instagram.com/" target="_blank"><img src="./Assets/Img/icono-ig.webp" alt="logotipo de Instagram" height="30px"></a>
               <a href="https://twitter.com/?lang=es" target="_blank"><img src="Assets/Img/icono-tw.png" alt="logotipo de twitter" height="30px"></a>
           </div>
         </div>
@@ -257,21 +257,21 @@
         <!-- Terminos y condiciones -->
         <div class="col-md-3">
           <h6>
-            <a href="/TerminosYCondiciones.html" class="linkFooter">Términos y condiciones</a>
+            <a href="./TerminosYCondiciones.html" class="linkFooter">Términos y condiciones</a>
           </h6>
         </div>
   
       <!-- Contacto -->
       <div class="col-md-2">
         <h6>
-          <a href="/Contacto.html" class="linkFooter">Contacto</a>
+          <a href="./Contacto.html" class="linkFooter">Contacto</a>
         </h6>
       </div>
   
       <!-- Nosotros -->
       <div class="col-md-2">
         <h6>
-          <a href="/Nosotros.html" class="linkFooter">Nosotros</a>
+          <a href="./Nosotros.html" class="linkFooter">Nosotros</a>
         </h6>
       </div>
   
@@ -302,7 +302,7 @@
 	<script src="./Assets/Js/nosotros.js"></script>
    <!--swal-->
    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-   <script src="/Assets/Js/main.js"></script>
+   <script src="./Assets/Js/main.js"></script>
  
 
    <!-- Vinculo a Bootstrap -->
