--- a/src/main/resources/static/Catalogo.html
+++ b/src/main/resources/static/Catalogo.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="/Assets/Img/logo.png">
+  <link rel="shortcut icon" href="./Assets/Img/logo.png">
   <title>Catálogo SakáChelas</title>
 
   <!-- Link de CDN para Bootstrap 5 CSS -->
@@ -30,20 +30,20 @@
 
 <nav class="navbar p-3" id="colo">
   <div class="container">
-    <a class="navbar-item" href="/Index.html">
-      <img src="/Assets/Img/logo.png" alt="" width="70" height="60">
+    <a class="navbar-item" href="./Index.html">
+      <img src="./Assets/Img/logo.png" alt="" width="70" height="60">
     </a>
       <div class="position-absolute top-50 start-50 translate-middle">
         <a class="navbar-item">
-          <img src="/Assets/Img/ribbon.png" alt="" width="200" height="80">
+          <img src="./Assets/Img/ribbon.png" alt="" width="200" height="80">
         </a>
       </div> 
     <div class="ms-auto">
-      <a class="navbar-item" href="/Login.html">
-        <img src="/Assets/Img/iconUser.png" alt="" width="30" height="30">
+      <a class="navbar-item" href="./Login.html">
+        <img src="./Assets/Img/iconUser.png" alt="" width="30" height="30">
       </a>
-      <a class="cart" href="/Cart.html">
-        <img src="/Assets/Img/cart.png" alt="" width="30" height="30"><span
+      <a class="cart" href="./Cart.html">
+        <img src="./Assets/Img/cart.png" alt="" width="30" height="30"><span
         class="position-absolute top-25 end-175 translate-middle" id="contador">0</span>
       </a>
     </div>
@@ -57,7 +57,7 @@
 
 <nav class="navbar navbar-expand-lg">
   <div class="container">
-    <a class="nav-link" id="cervezasNavBar" href="/Catalogo.html" style="color: #640002">CERVEZAS</a>
+    <a class="nav-link" id="cervezasNavBar" href="./Catalogo.html" style="color: #640002">CERVEZAS</a>
     <form class="d-flex d-lg-block col-sm-5 col-md-5 col-lg-5 ms-lg-5" role="search">
       <input class="form-control" type="search" placeholder="¿Qué buscas?" aria-label="Search">
     </form>
@@ -68,13 +68,13 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item">
-          <a class="nav-link" href="/Productores.html" style="color: #640002">PRODUCTORES</a>
+          <a class="nav-link" href="./Productores.html" style="color: #640002">PRODUCTORES</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/Nosotros.html" style="color: #640002">NOSOTROS</a>
+          <a class="nav-link" href="./Nosotros.html" style="color: #640002">NOSOTROS</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/Contacto.html" style="color: #640002">CONTACTANOS</a>
+          <a class="nav-link" href="./Contacto.html" style="color: #640002">CONTACTANOS</a>
         </li>
       </ul>
     </div>
@@ -160,7 +160,7 @@
     <!--aqui va el catalogo-->
     <div class="col-sm-10">
       
-       
+    </div>
 
           <section class="NovidadesSection">
             <main class="mainDestacados">
@@ -336,8 +336,6 @@
      </div> <!--container -->
   </div><!-- Productos -->
 
-  
-</section>
 <div class="album py-5">
   <div class="container">
 
@@ -347,8 +345,11 @@
     </div> <!-- row -->
    </div> <!--container -->
 </div><!-- Productos -->
+              </section>
 </main>
-</div><!--end col 10-->
+          </section>
+
+
 
 
 
@@ -366,9 +367,9 @@
               <h6> Tel: +52 55 55 55 55 </h6>
               <h6> Correo: correo@outlook.com </h6>
               <h6> Redes sociales </h6>
-              <a href="https://www.facebook.com/" target="_blank"><img src="Assets/Img/icono-fc.png" alt="logotipo de Facebook" height="30px"></a>
-              <a href="https://www.instagram.com/" target="_blank"><img src="Assets/Img/icono-ig.webp" alt="logotipo de Instagram" height="30px"></a>
-              <a href="https://twitter.com/?lang=es" target="_blank"><img src="Assets/Img/icono-tw.png" alt="logotipo de twitter" height="30px"></a>
+              <a href="https://www.facebook.com/" target="_blank"><img src="./Assets/Img/icono-fc.png" alt="logotipo de Facebook" height="30px"></a>
+              <a href="https://www.instagram.com/" target="_blank"><img src="./Assets/Img/icono-ig.webp" alt="logotipo de Instagram" height="30px"></a>
+              <a href="https://twitter.com/?lang=es" target="_blank"><img src="./Assets/Img/icono-tw.png" alt="logotipo de twitter" height="30px"></a>
           </div>
         </div>
   
@@ -382,21 +383,21 @@
         <!-- Terminos y condiciones -->
         <div class="col-md-3">
           <h6>
-            <a href="/TerminosYCondiciones.html" class="linkFooter">Términos y condiciones</a>
+            <a href="./TerminosYCondiciones.html" class="linkFooter">Términos y condiciones</a>
           </h6>
         </div>
   
       <!-- Contacto -->
       <div class="col-md-2">
         <h6>
-          <a href="/Contacto.html" class="linkFooter">Contacto</a>
+          <a href="./Contacto.html" class="linkFooter">Contacto</a>
         </h6>
       </div>
   
       <!-- Nosotros -->
       <div class="col-md-2">
         <h6>
-          <a href="/Nosotros.html" class="linkFooter">Nosotros</a>
+          <a href="./Nosotros.html" class="linkFooter">Nosotros</a>
         </h6>
       </div>
   
@@ -411,6 +412,8 @@
     <!-- </div> -->
   
     </div>
+    </div>
+  </div>
   </footer>
 
   <!--aqui va el script del nav-->
@@ -420,12 +423,12 @@
    
  
 <!--conexion js cart-->
-  <script src="./Assets/Js/cart.js"> </script>
+<script src="./Assets/Js/cart.js"> </script>
 <!--conexion js products-->
 <script src="./Assets/Js/catalogo.js"></script>
 <!--conexion sweetalert2-->
 <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-<script src="/Assets/Js/main.js"></script>
+<script src="./Assets/Js/main.js"></script>
 <!--llamado sweetaler2 de js-->
 <!--<script src="Js/sweerAlert.js"></script>-->
 </body>
