--- a/src/main/resources/static/Index.html
+++ b/src/main/resources/static/Index.html
@@ -12,7 +12,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 
-  <link rel="stylesheet" href="./Assets/Styles/inicio.css">
+  <link rel="stylesheet" href="./Assets/Css/inicio.css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -40,7 +40,7 @@
         <a class="navbar-item" href="./Login.html">
           <img src="./Assets/Img/iconUser.png" alt="" width="30" height="30">
         </a>
-        <a class="cart" href="/Cart.html">
+        <a class="cart" href="./Cart.html">
           <img src="./Assets/Img/cart.png" alt="" width="30" height="30"><span
             class="position-absolute top-25 end-175 translate-middle" id="contador">0</span>
         </a>
