--- a/src/main/resources/static/Productores.html
+++ b/src/main/resources/static/Productores.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="./Assets/Img/logo.png">
   <title>Sakáchelas</title>
 
  
@@ -13,16 +14,11 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="Assets/Styles/Productores.css">
+    <link rel="stylesheet" href="./Assets/Css/Productores.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,300&display=swap" rel="stylesheet">
 
-  <style>
-    body {
-      background-image: url(/Assets/Img/fondo.jpeg);
-    }
-  </style>
 </head>
 
 <body>
@@ -32,20 +28,20 @@
   <header>
     <nav class="navbar p-3" id="colo">
       <div class="container">
-        <a class="navbar-item" href="/Index.html">
-          <img src="/Assets/Img/logo.png" alt="" width="70" height="60">
+        <a class="navbar-item" href="./Index.html">
+          <img src="./Assets/Img/logo.png" alt="" width="70" height="60">
         </a>
         <div class="position-absolute top-50 start-50 translate-middle">
           <a class="navbar-item">
-            <img src="/Assets/Img/ribbon.png" alt="" width="200" height="80">
+            <img src="./Assets/Img/ribbon.png" alt="" width="200" height="80">
           </a>
         </div>
         <div class="ms-auto">
-          <a class="navbar-item" href="/Login.html">
-            <img src="/Assets/Img/iconUser.png" alt="" width="30" height="30">
+          <a class="navbar-item" href="./Login.html">
+            <img src="./Assets/Img/iconUser.png" alt="" width="30" height="30">
           </a>
-          <a class="cart" href="/Cart.html">
-            <img src="/Assets/Img/cart.png" alt="" width="30" height="30"><span
+          <a class="cart" href="./Cart.html">
+            <img src="./Assets/Img/cart.png" alt="" width="30" height="30"><span
             class="position-absolute top-25 end-175 translate-middle" id="contador">0</span>
           </a>
         </div>
@@ -56,7 +52,7 @@
 -------------------------------------------------------->
     <nav class="navbar navbar-expand-lg">
       <div class="container">
-        <a class="nav-link" id="cervezasNavBar" style="color: #640002" href="/Catalogo.html">CERVEZAS</a>
+        <a class="nav-link" id="cervezasNavBar" style="color: #640002" href="./Catalogo.html">CERVEZAS</a>
         <form class="d-flex d-lg-block col-sm-5 col-md-5 col-lg-5 ms-lg-5" role="search">
           <input class="form-control " type="search" placeholder="¿Qué buscas?" aria-label="Search">
         </form>
@@ -67,13 +63,13 @@
         <div class="collapse navbar-collapse" style="color: #640002" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link" style="color: #640002" href="/Productores.html">PRODUCTORES</a>
+              <a class="nav-link" style="color: #640002" href="./Productores.html">PRODUCTORES</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" style="color: #640002" href="/Nosotros.html">NOSOTROS</a>
+              <a class="nav-link" style="color: #640002" href="./Nosotros.html">NOSOTROS</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" style="color: #640002" href="/Contacto.html">CONTACTANOS</a>
+              <a class="nav-link" style="color: #640002" href="./Contacto.html">CONTACTANOS</a>
             </li>
           </ul>
         </div>
@@ -87,7 +83,7 @@
   <h1>NUESTROS PRODUCTORES</h1>
   <br>
     <div class="col">
-      <img src="/Assets/Img/KALIBREWS 1.png">
+      <img src="./Assets/Img/KALIBREWS 1.png">
 
       <h3 id="textprod">
         La casa KALI BREWS nace por el deseo de aportar nuevos matices al paladar del mercado mexicano aportando lo mejor de lúpulos, maltas internacionales y/o regionales, así como adjuntos propios de la región... como lo son el cacao de nuestra stout, la miel de nuestra pale ale así como los dulces tradicionales de café en nuestra Brown Ale, obteniendo mezclas únicas de una calidad excepcional específicamente diseñadas para ser una caricia al gusto.
@@ -95,7 +91,7 @@
     </div>
 
     <div class="col">
-      <img src="/Assets/Img/COPADO 1.png">
+      <img src="./Assets/Img/COPADO 1.png">
  
       <h3 id="textprod">
         Cervecería pionera en la revolución cervecera mexicana. Con su slogan: "La cerveza nos une". Ha creado cervezas de autor, procesadas de manera artesana con insumos naturales, que dan como resultado 5 exquisitos estilos. Café, cacao, vainilla o frutas son los elementos que Copado le ha añadido como un toque distintivo a las cervezas, cuya producción compara con una receta de cocina.
@@ -103,7 +99,7 @@
     </div>
 
     <div class="col">
-      <img src="/Assets/Img/FRACTAL 2.png">
+      <img src="./Assets/Img/FRACTAL 2.png">
 
       <h3 id="textprod">
         En Fractal, nos inspiró el crear desde cero una marca y poder hacer algo distinto a lo que se conoce dentro de la industria, retarnos a hacer las cosas diferentes y la pasión que tenemos es algo que nos diferencia del resto.
@@ -116,7 +112,7 @@
 
 <div class="container-fluid">
   <div class="row">
-    <img src="/Assets/Img/finalProductores1.png" style="width:100%;">
+    <img src="./Assets/Img/finalProductores1.png" style="width:100%;">
   </div>
 </div>
 <br>
@@ -134,9 +130,9 @@
               <h6> Tel: +52 55 55 55 55 </h6>
               <h6> Correo: correo@outlook.com </h6>
               <h6> Redes sociales </h6>
-              <a href="https://www.facebook.com/" target="_blank"><img src="Assets/Img/icono-fc.png" alt="logotipo de Facebook" height="30px"></a>
-              <a href="https://www.instagram.com/" target="_blank"><img src="Assets/Img/icono-ig.webp" alt="logotipo de Instagram" height="30px"></a>
-              <a href="https://twitter.com/?lang=es" target="_blank"><img src="Assets/Img/icono-tw.png" alt="logotipo de twitter" height="30px"></a>
+              <a href="https://www.facebook.com/" target="_blank"><img src="./Assets/Img/icono-fc.png" alt="logotipo de Facebook" height="30px"></a>
+              <a href="https://www.instagram.com/" target="_blank"><img src="./Assets/Img/icono-ig.webp" alt="logotipo de Instagram" height="30px"></a>
+              <a href="https://twitter.com/?lang=es" target="_blank"><img src="./Assets/Img/icono-tw.png" alt="logotipo de twitter" height="30px"></a>
           </div>
         </div>
   
@@ -150,21 +146,21 @@
         <!-- Terminos y condiciones -->
         <div class="col-md-3">
           <h6>
-            <a href="/TerminosYCondiciones.html" class="linkFooter">Términos y condiciones</a>
+            <a href="./TerminosYCondiciones.html" class="linkFooter">Términos y condiciones</a>
           </h6>
         </div>
   
       <!-- Contacto -->
       <div class="col-md-2">
         <h6>
-          <a href="/Contacto.html" class="linkFooter">Contacto</a>
+          <a href="./Contacto.html" class="linkFooter">Contacto</a>
         </h6>
       </div>
   
       <!-- Nosotros -->
       <div class="col-md-2">
         <h6>
-          <a href="/Nosotros.html" class="linkFooter">Nosotros</a>
+          <a href="./Nosotros.html" class="linkFooter">Nosotros</a>
         </h6>
       </div>
   
@@ -190,7 +186,7 @@ crossorigin="anonymous"></script>
 <script src="./Assets/Js/cart.js"> </script>
  <!--llamado sweetaler2 de js-->
  <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
- <script src="/Assets/Js/main.js"></script>
+ <script src="./Assets/Js/main.js"></script>
 </body>
 
 </html>
