--- a/src/main/resources/static/Contacto.html
+++ b/src/main/resources/static/Contacto.html
@@ -129,11 +129,11 @@
                         <span>Email</span>
                     </div>
                     <div class="inputBox">
-                        <textarea required="required"></textarea>
+                        <textarea required="required" id="body"></textarea>
                         <span>Escribe tu mensaje...</span>
                     </div>
                     <div class="inputBox">
-                        <input type="submit" name="" value="Enviar">
+                        <input type="submit" name="" value="Enviar" onclick="sendEmail()">
                     </div>
                 </form>
             </div>
