--- a/src/main/resources/static/Formadepago.html
+++ b/src/main/resources/static/Formadepago.html
@@ -282,7 +282,7 @@
   <!--conexion js-->
   <script src="./Assets/Js/cart.js"> </script>
   <!--Login.js-->
-  <script src="./Assets/Js/Login.js"></script>
+  <script src="./Assets/Js/FormaPago.js"></script>
   <!--validation-->
   <script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
   <!--swal-->
