--- a/src/main/resources/static/Catalogo.html
+++ b/src/main/resources/static/Catalogo.html
@@ -19,7 +19,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,300&display=swap" rel="stylesheet">
 
   <!--enlace con css-->
-  <link rel="stylesheet" href="./Assets/Css/catalogo.css">
+  <link rel="stylesheet" href="./Assets/Css/Catalogo.css">
 
 </head>
 
@@ -259,12 +259,12 @@
 
 
   <!--conexion js cart-->
-  <script src="./Assets/Js/cart.js"> </script>
+  <script src="./Assets/Js/Cart.js"> </script>
   <!--conexion js products-->
-  <script src="./Assets/Js/catalogo.js"></script>
+  <script src="./Assets/Js/Catalogo.js"></script>
   <!--conexion sweetalert2-->
   <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <script src="./Assets/Js/main.js"></script>
+  <script src="./Assets/Js/Main.js"></script>
   <!--llamado sweetaler2 de js-->
   <!--<script src="Js/sweerAlert.js"></script>-->
 </body>
