--- a/src/main/resources/static/Contacto.html
+++ b/src/main/resources/static/Contacto.html
@@ -13,7 +13,7 @@
 
     <script src="https://kit.fontawesome.com/307ddc93d2.js" crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" type="text/css" href="./Assets/Css/contacto.css">
+    <link rel="stylesheet" type="text/css" href="./Assets/Css/Contacto.css">
     
   <!--google fonts-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -206,12 +206,12 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
     <!-- JavaScript Form -->
-    <script src="./Assets/js/contacto.js"></script>
+    <script src="./Assets/js/Contacto.js"></script>
       <!--conexion js-->
-  <script src="./Assets/Js/cart.js"> </script>
+  <script src="./Assets/Js/Cart.js"> </script>
      <!--swal-->
   <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <script src="./Assets/Js/main.js"></script>
+  <script src="./Assets/Js/Main.js"></script>
 
 
 
