--- a/src/main/resources/static/FormaPago.html
+++ b/src/main/resources/static/FormaPago.html
@@ -287,7 +287,7 @@
   <script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
   <!--swal-->
   <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <script src="./Assets/Js/main.js"></script>
+  <script src="./Assets/Js/Main.js"></script>
 </body>
 
 </html>
