--- a/src/main/resources/static/cart.html
+++ b/src/main/resources/static/cart.html
@@ -24,7 +24,7 @@
 
 
     <!-- Vinculo a CSS -->
-    <link rel="stylesheet" href="./Assets/Css/cart.css">
+    <link rel="stylesheet" href="./Assets/Css/Cart.css">
 
 </head>
 <body>
@@ -177,7 +177,7 @@
 </footer>
 
     <!-- Vinculo a cart.js -->
-    <script src="./Assets/Js/cart.js"></script>
+    <script src="./Assets/Js/Cart.js"></script>
     
     <!-- Vinculo a Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
@@ -188,7 +188,7 @@
 
     <!--llamado sweetaler2 de js-->
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="./Assets/Js/main.js"></script>
+    <script src="./Assets/Js/Main.js"></script>
 
 </body>
 </html>
