--- a/src/main/resources/static/envio.html
+++ b/src/main/resources/static/envio.html
@@ -15,7 +15,7 @@
     <!-- //Iconos -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <!-- CSS file -->
-    <link rel="stylesheet" href="./Assets/Css/envio.css">
+    <link rel="stylesheet" href="./Assets/Css/Envio.css">
     <link rel="shortcut icon" href="./Assets/Img/logo.png">
 
     <title>Datos de envío SakáChelas</title>
@@ -341,15 +341,15 @@
 <!--jquery-->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <!--conexion js-->
-<script src="./Assets/Js/cart.js"> </script>
+<script src="./Assets/Js/Cart.js"> </script>
 
 <!--validation-->
 <script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
 <!--swal-->
 <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
-<script src="./Assets/Js/envio.js"></script>
-    <script src="./Assets/Js/main.js"></script>
+<script src="./Assets/Js/Envio.js"></script>
+    <script src="./Assets/Js/Main.js"></script>
 
 </body>
 </html>
