--- a/src/main/resources/static/Contacto.html
+++ b/src/main/resources/static/Contacto.html
@@ -114,12 +114,12 @@
                 <form>
                     <h2>Escribenos tu duda</h2>
                     <div class="inputBox" id="grupo__nombre">
-                        <input type="text" name="nombre" required="required">
+                        <input type="text" id="nombre" required="required">
                         <i class="formulario__validacion-estado fas fa-times-circle"></i>
                         <span>Nombre completo</span>
                     </div>
                     <div class="inputBox" id="grupo__telefono">
-                        <input type="text" name="telefono" required="required">
+                        <input type="text" id="telefono" required="required">
                         <i class="formulario__validacion-estado fas fa-times-circle"></i>
                         <span>Telefono</span>
                     </div>
