--- a/src/main/resources/static/envio.html
+++ b/src/main/resources/static/envio.html
@@ -267,7 +267,7 @@
                 </div>
                 <center>
                     <div class="my-2 p-1">
-                        <a href="./Formadepago.html"><button type="button" class="btn btn-outline-dark">Proceder al pago</button></a>
+                        <a href="./FormaPago.html"><button type="button" class="btn btn-outline-dark">Proceder al pago</button></a>
                     </div>
                 </center>
             </form>
