--- a/src/main/resources/static/nosotros.html
+++ b/src/main/resources/static/nosotros.html
@@ -21,7 +21,7 @@
 
 
     <!-- Vinculo a CSS -->
-    <link rel="stylesheet" href="./Assets/Css/nosotros.css">
+    <link rel="stylesheet" href="./Assets/Css/Nosotros.css">
     <!-- Vinculo para Roboto  -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -48,7 +48,7 @@
         <a class="navbar-item" href="./Login.html">
           <img src="Assets/Img/iconUser.png" alt="" width="30" height="30">
         </a>
-        <a class="cart" href="./cart.html">
+        <a class="cart" href="./Cart.html">
           <img src="./Assets/Img/cart.png" alt="" width="30" height="30"><span
           class="position-absolute top-25 end-175 translate-middle" id="contador">0</span>
         </a>
@@ -296,13 +296,13 @@
 	<script src="https://cdn.jsdelivr.net/npm/glider-js@1.7.3/glider.min.js"></script>
 	<script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
     <!--conexion js-->
-    <script src="./Assets/Js/cart.js"> </script>
+    <script src="./Assets/Js/Cart.js"> </script>
 
     <!-- Vinculo a JS -->
-	<script src="./Assets/Js/nosotros.js"></script>
+	<script src="./Assets/Js/Nosotros.js"></script>
    <!--swal-->
    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-   <script src="./Assets/Js/main.js"></script>
+   <script src="./Assets/Js/Main.js"></script>
  
 
    <!-- Vinculo a Bootstrap -->
