--- a/src/main/resources/static/Catalogo.html
+++ b/src/main/resources/static/Catalogo.html
@@ -117,7 +117,7 @@
             </ul>
           </div>
 
-          <!-- <div class="dropdown">
+          <div class="dropdown">
             <button type="button" class="btn dropdown-toggle" data-bs-toggle="dropdown">Tipo
           </button> 
 
@@ -126,7 +126,7 @@
               <li><a class="dropdown-item" href="">Lager</a></li>
               <li><a class="dropdown-item" href="">Abadia</a></li>
             </ul>
-          </div> -->
+          </div> 
 
           <div class="dropdown">
             <button type="button" class="btn dropdown-toggle" data-bs-toggle="dropdown">
@@ -179,8 +179,6 @@
             </main>
           </section>
         </div>
-
-        
 
 
       </div>
