--- a/src/main/resources/static/FormaPago.html
+++ b/src/main/resources/static/FormaPago.html
@@ -12,7 +12,7 @@
   <!--Bootstrap button-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <!--CSS file-->
-  <link rel="stylesheet" href="./Assets/Css/formadepago.css">
+  <link rel="stylesheet" href="./Assets/Css/FormaPago.css">
   <!--google fonts-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
