--- a/src/main/resources/static/Index.html
+++ b/src/main/resources/static/Index.html
@@ -13,7 +13,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 
-  <link rel="stylesheet" href="./Assets/Css/inicio.css">
+  <link rel="stylesheet" href="./Assets/Css/Inicio.css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -29,7 +29,7 @@
 -------------------------------------------------------->
   <nav class="navbar p-3" id="colo">
     <div class="container">
-      <a class="navbar-item" href="./index.html">
+      <a class="navbar-item" href="./Index.html">
         <img src="./Assets/Img/logo.png" alt="" width="70" height="60">
       </a>
       <div class="position-absolute top-50 start-50 translate-middle">
@@ -167,7 +167,7 @@
               Cerveza oscura <br>
               ABV 5.5%</h6>
             <h5 class="card-text">$90.00 <a href=""><i class="produto__icon fas fa-cart-plus"><img
-                    src="./Assets/Img/cart.png" alt="" class="img_carrito"></i></a></h5>
+                    src="./Assets/Img/Cart.png" alt="" class="img_carrito"></i></a></h5>
           </div>
         </div>
       </div>
@@ -265,10 +265,10 @@
     crossorigin="anonymous"></script>
 
   <!--conexion js-->
-  <script src="./Assets/Js/cart.js"> </script>
+  <script src="./Assets/Js/Cart.js"> </script>
   <!--Js swal-->
   <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <script src="./Assets/Js/main.js"></script>
+  <script src="./Assets/Js/Main.js"></script>
 
 </body>
 
