--- a/src/main/resources/static/Login.html
+++ b/src/main/resources/static/Login.html
@@ -169,7 +169,7 @@
           </div>
         </div>
         <div class="my-3 text-center">
-          <span>¿No tienes cuenta? <a href="./formulario.html"><h3>Registrate</h3></a></span> <br>
+          <span>¿No tienes cuenta? <a href="./Formulario.html"><h3>Registrate</h3></a></span> <br>
           <span><a href="#">Recuperar Password</a></span>
         </div>
 
@@ -245,14 +245,14 @@
   <!--jquery-->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
    <!--conexion js-->
-   <script src="./Assets/Js/cart.js"> </script>
+   <script src="./Assets/Js/Cart.js"> </script>
   <!--Login.js-->
   <script src="./Assets/Js/Login.js"></script>
   <!--validation-->
   <script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
   <!--swal-->
   <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <script src="./Assets/Js/main.js"></script>
+  <script src="./Assets/Js/Main.js"></script>
  
 
 </body>
