--- a/src/main/resources/static/Productores.html
+++ b/src/main/resources/static/Productores.html
@@ -183,10 +183,10 @@
 integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
 crossorigin="anonymous"></script>
 <!--conexion js-->
-<script src="./Assets/Js/cart.js"> </script>
+<script src="./Assets/Js/Cart.js"> </script>
  <!--llamado sweetaler2 de js-->
  <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
- <script src="./Assets/Js/main.js"></script>
+ <script src="./Assets/Js/Main.js"></script>
 </body>
 
 </html>
