--- a/src/main/resources/static/TerminosYCondiciones.html
+++ b/src/main/resources/static/TerminosYCondiciones.html
@@ -218,12 +218,12 @@ Fecha de última actualización 22 de noviembre de 2021.</p></center>
   <!--Login.js-->
 <!--  <script src="./Assets/Js/Login.js"></script>-->
   <!--conexion js-->
-  <script src="./Assets/Js/cart.js"> </script>
+  <script src="./Assets/Js/Cart.js"> </script>
   <!--validation-->
   <script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
    <!--swal-->
    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-   <script src="./Assets/Js/main.js"></script>
+   <script src="./Assets/Js/Main.js"></script>
  
 </body>
 
