--- a/src/main/resources/static/formulario.html
+++ b/src/main/resources/static/formulario.html
@@ -12,14 +12,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
    
     <!-- //CSS  -->
-    <link rel="stylesheet" href="/Assets/Css/normalize.css">
-    <link rel="stylesheet" href="/Assets/Css/formulario.css">
+  
+    <link rel="stylesheet" href="./Assets/Css/Formulario.css">
     
     <!-- //Fuentes -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,300&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="/Assets/Img/logo.png">
+    <link rel="shortcut icon" href="./Assets/Img/logo.png">
     <title>Formulario de Registro SakáChelas</title>
 
 </head>
@@ -29,20 +29,20 @@
 -------------------------------------------------------->
 <nav class="navbar p-3" id="colo">
   <div class="container">
-    <a class="navbar-item" href="/Index.html">
-      <img src="/Assets/Img/logo.png" alt="" width="70" height="60">
+    <a class="navbar-item" href="./Index.html">
+      <img src="./Assets/Img/logo.png" alt="" width="70" height="60">
     </a>
     <div class="position-absolute top-50 start-50 translate-middle">
       <a class="navbar-item">
-        <img src="/Assets/Img/ribbon.png" alt="" width="200" height="80">
+        <img src="./Assets/Img/ribbon.png" alt="" width="200" height="80">
       </a>
     </div>
     <div class="ms-auto">
-      <a class="navbar-item" href="/Login.html">
-        <img src="/Assets/Img/iconUser.png" alt="" width="30" height="30">
+      <a class="navbar-item" href="./Login.html">
+        <img src="./Assets/Img/iconUser.png" alt="" width="30" height="30">
       </a>
-      <a class="cart" href="/Cart.html">
-        <img src="/Assets/Img/cart.png" alt="" width="30" height="30"><span
+      <a class="cart" href="./Cart.html">
+        <img src="./Assets/Img/cart.png" alt="" width="30" height="30"><span
         class="position-absolute top-25 end-175 translate-middle" id="contador">0</span>
       </a>
     </div>
@@ -53,7 +53,7 @@
 -------------------------------------------------------->
   <nav class="navbar navbar-expand-lg">
     <div class="container">
-      <a class="nav-link" id="cervezasNavBar" href="/Catalogo.html">CERVEZAS</a>
+      <a class="nav-link" id="cervezasNavBar" href="./Catalogo.html">CERVEZAS</a>
       <form class="d-flex d-lg-block col-sm-5 col-md-5 col-lg-5 ms-lg-5" role="search">
         <input class="form-control" type="search" placeholder="¿Qué buscas?" aria-label="Search">
       </form>
@@ -64,13 +64,13 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link" href="/Productores.html">PRODUCTORES</a>
+            <a class="nav-link" href="./Productores.html">PRODUCTORES</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/Nosotros.html">NOSOTROS</a>
+            <a class="nav-link" href="./Nosotros.html">NOSOTROS</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/Contacto.html">CONTACTANOS</a>
+            <a class="nav-link" href="./Contacto.html">CONTACTANOS</a>
           </li>
         </ul>
       </div>
@@ -86,7 +86,7 @@
 
   <div class="col p-5">
     <div class="text-black align-content-center">
-      <img src="/Assets/Img/logo.png" width="100px" alt="">
+      <img src="./Assets/Img/logo.png" width="100px" alt="">
     </div>
     <div id="titulo">
       <h3 class="fw-bold text-center py-5">Crear Cuenta</h3>
@@ -216,9 +216,9 @@
             <h6> Tel: +52 55 55 55 55 </h6>
             <h6> Correo: correo@outlook.com </h6>
             <h6> Redes sociales </h6>
-            <a href="https://www.facebook.com/" target="_blank"><img src="Assets/Img/icono-fc.png" alt="logotipo de Facebook" height="30px"></a>
-            <a href="https://www.instagram.com/" target="_blank"><img src="Assets/Img/icono-ig.jpg" alt="logotipo de Instagram" height="30px"></a>
-            <a href="https://twitter.com/?lang=es" target="_blank"><img src="Assets/Img/icono-tw.png" alt="logotipo de twitter" height="30px"></a>
+            <a href="https://www.facebook.com/" target="_blank"><img src="./Assets/Img/icono-fc.png" alt="logotipo de Facebook" height="30px"></a>
+            <a href="https://www.instagram.com/" target="_blank"><img src="./Assets/Img/icono-ig.jpg" alt="logotipo de Instagram" height="30px"></a>
+            <a href="https://twitter.com/?lang=es" target="_blank"><img src="./Assets/Img/icono-tw.png" alt="logotipo de twitter" height="30px"></a>
         </div>
       </div>
 
@@ -232,21 +232,21 @@
       <!-- Terminos y condiciones -->
       <div class="col-md-2">
         <h6>
-          <a href="/TerminosYCondiciones.html" class="linkFooter">Términos y condiciones</a>
+          <a href="./TerminosYCondiciones.html" class="linkFooter">Términos y condiciones</a>
         </h6>
       </div>
 
     <!-- Contacto -->
     <div class="col-md-2">
       <h6>
-        <a href="/Contacto.html" class="linkFooter">Contacto</a>
+        <a href="./Contacto.html" class="linkFooter">Contacto</a>
       </h6>
     </div>
 
     <!-- Nosotros -->
     <div class="col-md-2">
       <h6>
-        <a href="/Nosotros.html" class="linkFooter">Nosotros</a>
+        <a href="./Nosotros.html" class="linkFooter">Nosotros</a>
       </h6>
     </div>
           
@@ -269,11 +269,9 @@
 <script src="/Assets/Js/formulario.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
  <!--conexion js-->
- <script src="./Assets/Js/cart.js"> </script>
+ <script src="./Assets/Js/Cart.js"> </script>
  <!--Js swal-->
  <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
- <script src="/Assets/Js/main.js"></script>
-
-
+ <script src="./Assets/Js/Main.js"></script>
 </body>
 </html>
