--- a/src/main/resources/static/Login.html
+++ b/src/main/resources/static/Login.html
@@ -128,7 +128,7 @@
 
           <center>
             <div class="my-2 p-1">
-              <button type="submit" class="btn btn-outline-dark">Iniciar sesión</button>
+              <button type="submit" class="btn btn-outline-dark"><a href="./Session.html">Iniciar sesión</button>
             </div>
           </center>
 
