--- a/src/main/resources/static/Catalogo.html
+++ b/src/main/resources/static/Catalogo.html
@@ -147,7 +147,7 @@
 
         </div>
 
-
+<!------------------------ Catálogo---------------------->   
 
         <div class="col-sm-10">
           <section class="NovidadesSection">
