--- a/src/main/resources/static/formulario.html
+++ b/src/main/resources/static/formulario.html
@@ -168,7 +168,7 @@
           <p><i class="bi bi-exclamation-triangle-fill"></i><b>Error</b> Por favor rellenar todos los campos</p>
         </div>
         <div class="form__group form__group-btn-enviar">
-            <button type="submit" class="form__btn">Crear Cuenta</button>
+            <button type="submit" class="form__btn" onclick="addEventListener">Crear Cuenta</button>
             <p class="form__mensaje-exito">Formulario enviado exitosamente</p>
         </div>
       </form>
@@ -266,7 +266,7 @@
 
     <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-<script src="/Assets/Js/formulario.js"></script>
+<script src="./Assets/Js/Formulario.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
  <!--conexion js-->
  <script src="./Assets/Js/Cart.js"> </script>
