--- a/src/main/resources/static/Productores.html
+++ b/src/main/resources/static/Productores.html
@@ -52,7 +52,7 @@
 -------------------------------------------------------->
     <nav class="navbar navbar-expand-lg">
       <div class="container">
-        <a class="nav-link" id="cervezasNavBar" style="color: #640002" href="./Catalogo.html">CERVEZAS</a>
+        <a class="nav-link" id="cervezasNavBar" style="color: #640002" onclick="updateFiltro('all')">CERVEZAS</a>
         <form class="d-flex d-lg-block col-sm-5 col-md-5 col-lg-5 ms-lg-5" role="search">
           <input class="form-control " type="search" placeholder="¿Qué buscas?" aria-label="Search">
         </form>
