--- a/src/main/resources/static/formulario.html
+++ b/src/main/resources/static/formulario.html
@@ -53,7 +53,7 @@
 -------------------------------------------------------->
   <nav class="navbar navbar-expand-lg">
     <div class="container">
-      <a class="nav-link" id="cervezasNavBar" href="./Catalogo.html">CERVEZAS</a>
+      <a class="nav-link" id="cervezasNavBar" onclick="updateFiltro('all')">CERVEZAS</a>
       <form class="d-flex d-lg-block col-sm-5 col-md-5 col-lg-5 ms-lg-5" role="search">
         <input class="form-control" type="search" placeholder="¿Qué buscas?" aria-label="Search" id="navbarBusqueda">
       </form>
